; ModuleID = '/home/carl/AnghaBench/tengine/src/event/modules/extr_ngx_win32_select_module.c_ngx_select_init_conf.c'
source_filename = "/home/carl/AnghaBench/tengine/src/event/modules/extr_ngx_win32_select_module.c_ngx_select_init_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i64 }

@ngx_event_core_module = common dso_local global i32 0, align 4
@ngx_select_module = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@NGX_CONF_OK = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_7__*, i8*)* @ngx_select_init_conf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ngx_select_init_conf(%struct.TYPE_7__* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @ngx_event_core_module, align 4
  %11 = call %struct.TYPE_6__* @ngx_event_get_conf(i32 %9, i32 %10)
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %6, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @ngx_select_module, i32 0, i32 0), align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i8*, i8** @NGX_CONF_OK, align 8
  store i8* %18, i8** %3, align 8
  br label %21

19:                                               ; preds = %2
  %20 = load i8*, i8** @NGX_CONF_OK, align 8
  store i8* %20, i8** %3, align 8
  br label %21

21:                                               ; preds = %19, %17
  %22 = load i8*, i8** %3, align 8
  ret i8* %22
}

declare dso_local %struct.TYPE_6__* @ngx_event_get_conf(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
